# carbondate

./: build  build.bat  check_debug.py  gen_docs  gen_docs.bat  host_docs  host_docs.bat  pyproject.toml
carbondate/: globals.py
